--- a/app/views/public/users/_private_posts.html.erb
+++ b/app/views/public/users/_private_posts.html.erb
@@ -34,7 +34,7 @@
     <div class="col-4"></div>
   <% end %>
 </div>
-<%= paginate posts, :param_name => 'favorite_posts_page', remote: true %>
+<%= paginate posts, :param_name => 'private_posts_page', remote: true %>
 <style>
   .pagination {
     text-align: center;
