--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -15,7 +15,15 @@
                 </div>
                 <div class="col-9">
                   <p class="card-title">
-                    <strong><i class="fa-solid fa-feather"></i><span>  <%= @post.title %></span></strong>
+                    <strong>
+                      <i class="fa-solid fa-feather"></i>
+                      <span>
+                        <%= @post.title %>
+                        <% if @post.status == "private" %>
+                          <i class="fa-solid fa-lock"></i>
+                        <% end %>
+                      </span>
+                    </strong>
                   </p>
                   <h5 id="post_<%= @post.id %>"><%= @post.created_at.strftime('%Y/%m/%d') %>  <span class="comments-count">コメント数:<%= @post.post_comments.count %></span>  <span class="favorite-btn"><%= render "public/favorites/btn", post: @post %></span></h5>
                   <p class="card-text"><%= @post.body %></p>
