--- a/app/views/public/reports/new.html.erb
+++ b/app/views/public/reports/new.html.erb
@@ -11,7 +11,7 @@
       <!--  <%#= f.file_field :post_image, class: "form-control-file user_image", accept: 'image/png,image/gif,image/jpeg' %>-->
       <!--</div>-->
       <div class="form-group">
-        <%= f.label :reason, "通報の理由" %> <i class="fa-solid fa-pen-clip"></i>
+        <%= f.label :reason, "#{@user.name}さんを通報する理由" %> <i class="fa-solid fa-pen-clip"></i>
         <%= f.text_area :reason, placeholder:"通報理由をここに", autofocus: true, rows: '3', class: "form-control" %>
       </div>
       <div class="form-group">
