--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -20,20 +20,20 @@
               </div>
 
               <div class="field">
-                <%= f.label :password %>
+                <%= f.label :password, "パスワード" %>
                 <% if @minimum_password_length %>
-                <em>(<%= @minimum_password_length %> characters minimum)</em>
+                <em>(<%= @minimum_password_length %> 文字以内)</em>
                 <% end %><br />
                 <%= f.password_field :password, autocomplete: "new-password" %>
               </div>
 
               <div class="field">
-                <%= f.label :password_confirmation %><br />
+                <%= f.label :password_confirmation, "パスワード(確認用)" %><br />
                 <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
               </div>
 
               <div class="actions mt-2">
-                <%= f.submit "Sign up" %>
+                <%= f.submit "新規登録" %>
               </div>
             <% end %>
 
