--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,46 +1,97 @@
-<div class="container">
-  <div class="row">
-    <div class="col-12">
-      <div class="card text-center m-5 shadow-sm" style="width: 22rem;">
-        <div class="card-body text-center">
+<div class='container'>
+  <div class='row no-gutters'>
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
+    <h2 class="text-center text-dark bg-light p-4 mb-0">新規登録 <i class="fa-solid fa-user-plus"></i></h2>
+    <div class="form-body bg-light p-4">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "public/shared/error_messages", resource: resource %>
 
-          <h2>新規登録</h2>
-
-            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-              <%= render "public/shared/error_messages", resource: resource %>
-
-              <div class="field">
-                <%= f.label :name %><br>
-                <%= f.text_field :name, autofocus: true %>
-              </div>
-
-              <div class="field">
-                <%= f.label :email %><br />
-                <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-              </div>
-
-              <div class="field">
-                <%= f.label :password, "パスワード" %>
-                <% if @minimum_password_length %>
-                <em>(<%= @minimum_password_length %> 文字以内)</em>
-                <% end %><br />
-                <%= f.password_field :password, autocomplete: "new-password" %>
-              </div>
-
-              <div class="field">
-                <%= f.label :password_confirmation, "パスワード(確認用)" %><br />
-                <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-              </div>
-
-              <div class="actions mt-2">
-                <%= f.submit "新規登録" %>
-              </div>
-            <% end %>
-
-            <%= render "public/shared/links" %>
-
-        </div>
+      <div class="field">
+        <%= f.label :name %><br>
+        <%= f.text_field :name, autofocus: true, class: "form-control" %>
       </div>
+
+      <div class="field">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password, "パスワード" %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> 文字以内)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+      </div>
+
+      <div class="field">
+        <%= f.label :password_confirmation, "パスワード(確認用)" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+      </div>
+
+      <div class="actions mt-2">
+        <%= f.submit "新規登録", class: 'btn btn-outline-warning btn-block rounded-pill' %>
+      </div>
+    <% end %>
+    <%= render "public/shared/links" %>
+    </div>
     </div>
   </div>
 </div>
+
+<style>
+  .fa-user-plus {
+    color: #FFD700;
+  }
+
+  /*.form-body {*/
+  /*  background-color: #FFFFCC;*/
+  /*}*/
+</style>
+
+<!--<div class="container">-->
+<!--  <div class="row">-->
+<!--    <div class="col-12">-->
+<!--      <div class="card text-center m-5 shadow-sm" style="width: 22rem;">-->
+<!--        <div class="card-body text-center">-->
+
+<!--          <h2>新規登録</h2>-->
+
+<!--            <%#= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>-->
+<!--              <%#= render "public/shared/error_messages", resource: resource %>-->
+
+<!--              <div class="field">-->
+<!--                <%#= f.label :name %><br>-->
+<!--                <%#= f.text_field :name, autofocus: true %>-->
+<!--              </div>-->
+
+<!--              <div class="field">-->
+<!--                <%#= f.label :email %><br />-->
+<!--                <%#= f.email_field :email, autofocus: true, autocomplete: "email" %>-->
+<!--              </div>-->
+
+<!--              <div class="field">-->
+<!--                <%#= f.label :password, "パスワード" %>-->
+<!--                <%# if @minimum_password_length %>-->
+<!--                <em>(<%#= @minimum_password_length %> 文字以内)</em>-->
+<!--                <%# end %><br />-->
+<!--                <%#= f.password_field :password, autocomplete: "new-password" %>-->
+<!--              </div>-->
+
+<!--              <div class="field">-->
+<!--                <%#= f.label :password_confirmation, "パスワード(確認用)" %><br />-->
+<!--                <%#= f.password_field :password_confirmation, autocomplete: "new-password" %>-->
+<!--              </div>-->
+
+<!--              <div class="actions mt-2">-->
+<!--                <%#= f.submit "新規登録" %>-->
+<!--              </div>-->
+<!--            <%# end %>-->
+
+<!--            <%#= render "public/shared/links" %>-->
+
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
