--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -33,6 +33,7 @@
         <%= f.submit "新規登録", class: 'btn btn-outline-warning btn-block rounded-pill' %>
       </div>
     <% end %>
+    <p class="text-center mt-3"><i class="fa-solid fa-check"></i> 会員登録がお済みの方 </p>
     <%= render "public/shared/links" %>
     </div>
     </div>
