--- a/app/views/public/shared/_links.html.erb
+++ b/app/views/public/shared/_links.html.erb
@@ -1,5 +1,5 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "会員の方はこちら", new_session_path(resource_name), class: 'btn btn-outline-warning btn-block rounded-pill mt-3' %><br />
+  <%= link_to "ログインはこちら", new_session_path(resource_name), class: 'btn btn-outline-warning btn-block rounded-pill mt-1' %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
