--- a/app/views/public/shared/_links.html.erb
+++ b/app/views/public/shared/_links.html.erb
@@ -1,8 +1,8 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "ログインはこちら", new_session_path(resource_name), class: 'btn btn-outline-warning btn-block rounded-pill mt-1' %><br />
+  <%= link_to "ログインはこちら", new_session_path(resource_name), class: 'btn btn-outline-info btn-block rounded-pill mt-1' %><br />
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "新規会員登録はこちら", new_registration_path(resource_name), class: 'btn btn-outline-warning btn-block rounded-pill mt-3' %><br />
+  <%= link_to "新規会員登録はこちら", new_registration_path(resource_name), class: 'btn btn-outline-success btn-block rounded-pill mt-3' %><br />
 <% end %>
 
