--- a/app/views/public/rooms/index.html.erb
+++ b/app/views/public/rooms/index.html.erb
@@ -52,7 +52,7 @@
         </table>
       <% else %>
         <h5>チャットはまだありません</h5>
-        <p>ユーザー同士で相互フォローになるとチャットで会話ができるようになります。</p>
+        <p>ユーザー同士で相互フォローになると<br>ユーザーページからチャットで会話ができるようになります。</p>
       <% end %>
     </div>
   </div>
